adding new attribute up to C-0069

--- a/controls/automaticmappingserviceaccount.json
+++ b/controls/automaticmappingserviceaccount.json
@@ -1,7 +1,17 @@
 {
     "name": "Automatic mapping of service account",
     "attributes": {
-        "armoBuiltin": true
+        "armoBuiltin": true,
+        "control-type-tags": [
+            "security",
+            "compliance"
+        ],
+        "attack-tracks": {
+            "container": [
+                "Credential access",
+                "Impact - K8s API access"
+            ]
+        }
     },
     "description": "Potential attacker may gain access to a POD and steal its service account token. Therefore, it is recommended to disable automatic mapping of the service account tokens in service account configuration and enable it only for PODs that need to use them.",
     "remediation": "Disable automatic mounting of service account tokens to PODs either at the service account level or at the individual POD level, by specifying the automountServiceAccountToken: false. Note that POD level takes precedence.",
@@ -12,6 +22,6 @@
     "long_description": "We have it in Armo best (Automatic mapping of service account token).",
     "test": "Check all service accounts on which automount is not disabled.  Check all workloads on which they and their service account don't disable automount ",
     "controlID": "C-0034",
-    "baseScore": 5.0, 
+    "baseScore": 6.0,
     "example": "@controls/examples/c034.yaml"
 }
