--- a/controls/configuredlivenessprobe.json
+++ b/controls/configuredlivenessprobe.json
@@ -1,7 +1,10 @@
 {
     "name": "Configured liveness probe",
     "attributes": {
-        "armoBuiltin": true
+        "armoBuiltin": true,
+        "control-type-tags": [
+            "devops"
+        ]
     },
     "description": "Liveness probe is intended to ensure that workload remains healthy during its entire execution lifecycle, or otherwise restrat the container. It is highly recommended to define liveness probe for every worker container. This control finds all the PODs where the Liveness probe is not configured.",
     "remediation": "Ensure Liveness probes are configured wherever possible.",
