--- a/controls/Applicationscredentialsinconfigurationfiles.json
+++ b/controls/Applicationscredentialsinconfigurationfiles.json
@@ -5,7 +5,20 @@
         "microsoftMitreColumns": [
             "Credential access",
             "Lateral Movement"
-        ]
+        ],
+        "control-type-tags": [
+            "security",
+            "compliance",
+            "security-impact"
+        ],
+        "attack-tracks": {
+            "kubeapi": [
+                "Credential access"
+            ],
+            "container": [
+                "Credential access"
+            ]
+        }
     },
     "description": "Attackers who have access to configuration files can steal the stored secrets and use them. This control checks if ConfigMaps or pod specifications have sensitive information in their configuration.",
     "remediation": "Use Kubernetes secrets or Key Management Systems to store credentials.",
