--- a/controls/networkmapping.json
+++ b/controls/networkmapping.json
@@ -4,7 +4,16 @@
         "armoBuiltin": true,
         "microsoftMitreColumns": [
             "Discovery"
-        ]
+        ],
+        "control-type-tags": [
+            "security",
+            "compliance"
+        ],
+        "attack-tracks": {
+            "container": [
+                "Discovery"
+            ]
+        }
     },
     "description": "If no network policy is defined, attackers who gain access to a single container may use it to probe the network. This control lists all namespaces in which no network policies are defined.",
     "remediation": "Define network policies or use similar network protection mechanisms.",
@@ -15,6 +24,6 @@
     "long_description": "Attackers may try to map the cluster network to get information on the running applications, including scanning for known vulnerabilities. By default, there is no restriction on pods communication in Kubernetes. Therefore, attackers who gain access to a single container, may use it to probe the network.",
     "test": "Check for each namespace if there is a network policy defined.",
     "controlID": "C-0049",
-    "baseScore": 4.0, 
+    "baseScore": 3.0,
     "example": "@controls/examples/c049.yaml"
 }
