--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -2,8 +2,8 @@
 name: update-csvs
 
 on:
-  # push:
-  #   branches: [ dev ]
+  push:
+    branches: [ dev ]
   pull_request:
     branches: [ dev ]
     types: [ closed ]
