--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -28,10 +28,8 @@ jobs:
     - name: Run a update-csv-files script
       run: python ./scripts/update-csv-files.py
     
-    - name: Run export-dev script
-      run: python ./scripts/export-dev.py
-
-
+    - name: Run export script
+      run: OUTPUT=pre-release python ./scripts/export.py
 
     - name: stage changed files
       run: git add .
