updated attack tracks structure and controls attributes

--- a/controls/automaticmappingserviceaccount.json
+++ b/controls/automaticmappingserviceaccount.json
@@ -2,16 +2,19 @@
     "name": "Automatic mapping of service account",
     "attributes": {
         "armoBuiltin": true,
-        "control-type-tags": [
+        "controlTypeTags": [
             "security",
             "compliance"
         ],
-        "attack-tracks": {
-            "container": [
-                "Credential access",
-                "Impact - K8s API access"
-            ]
-        }
+        "attackTracks": [
+            {
+                "attackTrack": "container",
+                "categories": [
+                    "Credential access",
+                    "Impact - K8s API access"
+                ]
+            }
+        ]
     },
     "description": "Potential attacker may gain access to a POD and steal its service account token. Therefore, it is recommended to disable automatic mapping of the service account tokens in service account configuration and enable it only for PODs that need to use them.",
     "remediation": "Disable automatic mounting of service account tokens to PODs either at the service account level or at the individual POD level, by specifying the automountServiceAccountToken: false. Note that POD level takes precedence.",
