--- a/controls/networkmapping.json
+++ b/controls/networkmapping.json
@@ -5,15 +5,18 @@
         "microsoftMitreColumns": [
             "Discovery"
         ],
-        "control-type-tags": [
+        "controlTypeTags": [
             "security",
             "compliance"
         ],
-        "attack-tracks": {
-            "container": [
-                "Discovery"
-            ]
-        }
+        "attackTracks": [
+            {
+                "attackTrack": "container",
+                "categories": [
+                    "Discovery"
+                ]
+            }
+        ]
     },
     "description": "If no network policy is defined, attackers who gain access to a single container may use it to probe the network. This control lists all namespaces in which no network policies are defined.",
     "remediation": "Define network policies or use similar network protection mechanisms.",
