--- a/controls/Applicationscredentialsinconfigurationfiles.json
+++ b/controls/Applicationscredentialsinconfigurationfiles.json
@@ -6,19 +6,25 @@
             "Credential access",
             "Lateral Movement"
         ],
-        "control-type-tags": [
+        "controlTypeTags": [
             "security",
             "compliance",
             "security-impact"
         ],
-        "attack-tracks": {
-            "kubeapi": [
-                "Credential access"
-            ],
-            "container": [
-                "Credential access"
-            ]
-        }
+        "attackTracks": [
+            {
+                "attackTrack": "kubeapi",
+                "categories": [
+                    "Credential access"
+                ]
+            },
+            {
+                "attackTrack": "container",
+                "categories": [
+                    "Credential access"
+                ]
+            }
+        ]
     },
     "description": "Attackers who have access to configuration files can steal the stored secrets and use them. This control checks if ConfigMaps or pod specifications have sensitive information in their configuration.",
     "remediation": "Use Kubernetes secrets or Key Management Systems to store credentials.",
