--- a/controls/ensure-that-the-controller-manager-service-account-private-key-file-argument-is-set-as-appropriate.json
+++ b/controls/ensure-that-the-controller-manager-service-account-private-key-file-argument-is-set-as-appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.3.4",
     "controlID": "CIS-1.3.4",
-    "name": "Ensure that the --service-account-private-key-file argument is set as appropriate",
+    "name": "Ensure that the Controller Manager --service-account-private-key-file argument is set as appropriate",
     "description": "Explicitly set a service account private key file for service accounts on the controller manager.",
     "long_description": "To ensure that keys for service account tokens can be rotated as needed, a separate public/private key pair should be used for signing service account tokens. The private key should be specified to the controller manager with `--service-account-private-key-file` as appropriate.",
     "remediation": "Edit the Controller Manager pod specification file `/etc/kubernetes/manifests/kube-controller-manager.yaml` on the Control Plane node and set the `--service-account-private-key-file` parameter to the private key file for service accounts.\n\n \n```\n--service-account-private-key-file=<filename>\n\n```\n\n#### Impact Statement\nYou would need to securely maintain the key file and rotate the keys based on your organization's key rotation policy.\n\n#### Default Value\nBy default, `--service-account-private-key-file` it not set.",
