--- a/controls/ensure-that-the-controller-manager-terminated-pod-gc-threshold-argument-is-set-as-appropriate.json
+++ b/controls/ensure-that-the-controller-manager-terminated-pod-gc-threshold-argument-is-set-as-appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.3.1",
     "controlID": "CIS-1.3.1",
-    "name": "Ensure that the --terminated-pod-gc-threshold argument is set as appropriate",
+    "name": "Ensure that the Controller Manager --terminated-pod-gc-threshold argument is set as appropriate",
     "description": "Activate garbage collector on pod termination, as appropriate.",
     "long_description": "Garbage collection is important to ensure sufficient resource availability and avoiding degraded performance and availability. In the worst case, the system might crash or just be unusable for a long period of time. The current setting for garbage collection is 12,500 terminated pods which might be too high for your system to sustain. Based on your system resources and tests, choose an appropriate threshold value to activate garbage collection.",
     "remediation": "Edit the Controller Manager pod specification file `/etc/kubernetes/manifests/kube-controller-manager.yaml` on the Control Plane node and set the `--terminated-pod-gc-threshold` to an appropriate threshold, for example:\n\n \n```\n--terminated-pod-gc-threshold=10\n\n```\n\n#### Impact Statement\nNone\n\n#### Default Value\nBy default, `--terminated-pod-gc-threshold` is set to `12500`.",
