rename CIS 1.2 controls and rules to more unique names

--- a/controls/Ensure that the --client-ca-file argument is set as appropriate.json
+++ b/controls/Ensure that the --client-ca-file argument is set as appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.2.27",
     "controlID": "CIS-1.2.27",
-    "name": "Ensure that the --client-ca-file argument is set as appropriate",
+    "name": "Ensure that the API Server --client-ca-file argument is set as appropriate",
     "description": "Setup TLS connection on the API server.",
     "long_description": "API server communication contains sensitive parameters that should remain encrypted in transit. Configure the API server to serve only HTTPS traffic. If `--client-ca-file` argument is set, any request presenting a client certificate signed by one of the authorities in the `client-ca-file` is authenticated with an identity corresponding to the CommonName of the client certificate.",
     "remediation": "Follow the Kubernetes documentation and set up the TLS connection on the apiserver. Then, edit the API server pod specification file `/etc/kubernetes/manifests/kube-apiserver.yaml` on the master node and set the client certificate authority file.\n\n \n```\n--client-ca-file=<path/to/client-ca-file>\n\n```\n\n#### Impact Statement\nTLS and client certificate authentication must be configured for your Kubernetes cluster deployment.\n\n#### Default Value\nBy default, `--client-ca-file` argument is not set.",
@@ -13,7 +13,7 @@
         "armoBuiltin": true
     },
     "rulesNames": [
-        "ensure-that-the-client-ca-file-argument-is-set-as-appropriate"
+        "ensure-that-the-api-server-client-ca-file-argument-is-set-as-appropriate"
     ],
     "baseScore": 8
 }
