--- a/controls/Ensure that the --audit-log-maxage argument is set to 30 or as appropriate.json
+++ b/controls/Ensure that the --audit-log-maxage argument is set to 30 or as appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.2.19",
     "controlID": "CIS-1.2.19",
-    "name": "Ensure that the --audit-log-maxage argument is set to 30 or as appropriate",
+    "name": "Ensure that the API Server --audit-log-maxage argument is set to 30 or as appropriate",
     "description": "Retain the logs for at least 30 days or as appropriate.",
     "long_description": "Retaining logs for at least 30 days ensures that you can go back in time and investigate or correlate any events. Set your audit log retention period to 30 days or as per your business requirements.",
     "remediation": "Edit the API server pod specification file `/etc/kubernetes/manifests/kube-apiserver.yaml` on the Control Plane node and set the `--audit-log-maxage` parameter to 30 or as an appropriate number of days:\n\n \n```\n--audit-log-maxage=30\n\n```\n\n#### Impact Statement\nNone\n\n#### Default Value\nBy default, auditing is not enabled.",
@@ -13,7 +13,7 @@
         "armoBuiltin": true
     },
     "rulesNames": [
-        "ensure-that-the-audit-log-maxage-argument-is-set-to-30-or-as-appropriate"
+        "ensure-that-the-api-server-audit-log-maxage-argument-is-set-to-30-or-as-appropriate"
     ],
     "baseScore": 4
 }
