--- a/controls/Ensure that the --audit-log-maxbackup argument is set to 10 or as appropriate.json
+++ b/controls/Ensure that the --audit-log-maxbackup argument is set to 10 or as appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.2.20",
     "controlID": "CIS-1.2.20",
-    "name": "Ensure that the --audit-log-maxbackup argument is set to 10 or as appropriate",
+    "name": "Ensure that the API Server --audit-log-maxbackup argument is set to 10 or as appropriate",
     "description": "Retain 10 or an appropriate number of old log files.",
     "long_description": "Kubernetes automatically rotates the log files. Retaining old log files ensures that you would have sufficient log data available for carrying out any investigation or correlation. For example, if you have set file size of 100 MB and the number of old log files to keep as 10, you would approximate have 1 GB of log data that you could potentially use for your analysis.",
     "remediation": "Edit the API server pod specification file `/etc/kubernetes/manifests/kube-apiserver.yaml` on the Control Plane node and set the `--audit-log-maxbackup` parameter to 10 or to an appropriate value.\n\n \n```\n--audit-log-maxbackup=10\n\n```\n\n#### Impact Statement\nNone\n\n#### Default Value\nBy default, auditing is not enabled.",
@@ -13,7 +13,7 @@
         "armoBuiltin": true
     },
     "rulesNames": [
-        "ensure-that-the-audit-log-maxbackup-argument-is-set-to-10-or-as-appropriate"
+        "ensure-that-the-api-server-audit-log-maxbackup-argument-is-set-to-10-or-as-appropriate"
     ],
     "baseScore": 4
 }
