--- a/controls/Ensure that the --encryption-provider-config argument is set as appropriate.json
+++ b/controls/Ensure that the --encryption-provider-config argument is set as appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.2.29",
     "controlID": "CIS-1.2.29",
-    "name": "Ensure that the --encryption-provider-config argument is set as appropriate",
+    "name": "Ensure that the API Server --encryption-provider-config argument is set as appropriate",
     "description": "Encrypt etcd key-value store.",
     "long_description": "etcd is a highly available key-value store used by Kubernetes deployments for persistent storage of all of its REST API objects. These objects are sensitive in nature and should be encrypted at rest to avoid any disclosures.",
     "remediation": "Follow the Kubernetes documentation and configure a `EncryptionConfig` file. Then, edit the API server pod specification file `/etc/kubernetes/manifests/kube-apiserver.yaml` on the master node and set the `--encryption-provider-config` parameter to the path of that file:\n\n \n```\n--encryption-provider-config=</path/to/EncryptionConfig/File>\n\n```\n\n#### Impact Statement\nNone\n\n#### Default Value\nBy default, `--encryption-provider-config` is not set.",
@@ -13,7 +13,7 @@
         "armoBuiltin": true
     },
     "rulesNames": [
-        "ensure-that-the-encryption-provider-config-argument-is-set-as-appropriate"
+        "ensure-that-the-api-server-encryption-provider-config-argument-is-set-as-appropriate"
     ],
     "baseScore": 7
 }
