--- a/controls/Ensure that the --etcd-cafile argument is set as appropriate.json
+++ b/controls/Ensure that the --etcd-cafile argument is set as appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.2.28",
     "controlID": "CIS-1.2.28",
-    "name": "Ensure that the --etcd-cafile argument is set as appropriate",
+    "name": "Ensure that the API Server --etcd-cafile argument is set as appropriate",
     "description": "etcd should be configured to make use of TLS encryption for client connections.",
     "long_description": "etcd is a highly-available key value store used by Kubernetes deployments for persistent storage of all of its REST API objects. These objects are sensitive in nature and should be protected by client authentication. This requires the API server to identify itself to the etcd server using a SSL Certificate Authority file.",
     "remediation": "Follow the Kubernetes documentation and set up the TLS connection between the apiserver and etcd. Then, edit the API server pod specification file `/etc/kubernetes/manifests/kube-apiserver.yaml` on the master node and set the etcd certificate authority file parameter.\n\n \n```\n--etcd-cafile=<path/to/ca-file>\n\n```\n\n#### Impact Statement\nTLS and client certificate authentication must be configured for etcd.\n\n#### Default Value\nBy default, `--etcd-cafile` is not set.",
@@ -13,7 +13,7 @@
         "armoBuiltin": true
     },
     "rulesNames": [
-        "ensure-that-the-etcd-cafile-argument-is-set-as-appropriate"
+        "ensure-that-the-api-server-etcd-cafile-argument-is-set-as-appropriate"
     ],
     "baseScore": 8
 }
