--- a/controls/Ensure that the --kubelet-client-certificate and --kubelet-client-key arguments are set as appropriate.json
+++ b/controls/Ensure that the --kubelet-client-certificate and --kubelet-client-key arguments are set as appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.2.4",
     "controlID": "CIS-1.2.4",
-    "name": "Ensure that the --kubelet-client-certificate and --kubelet-client-key arguments are set as appropriate",
+    "name": "Ensure that the API Server --kubelet-client-certificate and --kubelet-client-key arguments are set as appropriate",
     "description": "Enable certificate based kubelet authentication.",
     "long_description": "The apiserver, by default, does not authenticate itself to the kubelet's HTTPS endpoints. The requests from the apiserver are treated anonymously. You should set up certificate-based kubelet authentication to ensure that the apiserver authenticates itself to kubelets when submitting requests.",
     "remediation": "Follow the Kubernetes documentation and set up the TLS connection between the apiserver and kubelets. Then, edit API server pod specification file `/etc/kubernetes/manifests/kube-apiserver.yaml` on the Control Plane node and set the kubelet client certificate and key parameters as below.\n\n \n```\n--kubelet-client-certificate=<path/to/client-certificate-file>\n--kubelet-client-key=<path/to/client-key-file>\n\n```\n\n#### Impact Statement\nYou require TLS to be configured on apiserver as well as kubelets.\n\n#### Default Value\nBy default, certificate-based kubelet authentication is not set.",
@@ -13,7 +13,7 @@
         "armoBuiltin": true
     },
     "rulesNames": [
-        "ensure-that-the-kubelet-client-certificate-and-kubelet-client-key-arguments-are-set-as-appropriate"
+        "ensure-that-the-api-server-kubelet-client-certificate-and-kubelet-client-key-arguments-are-set-as-appropriate"
     ],
     "baseScore": 7
 }
