--- a/controls/Ensure that the --tls-cert-file and --tls-private-key-file arguments are set as appropriate.json
+++ b/controls/Ensure that the --tls-cert-file and --tls-private-key-file arguments are set as appropriate.json
@@ -1,7 +1,7 @@
 {
     "id": "CIS-1.2.26",
     "controlID": "CIS-1.2.26",
-    "name": "Ensure that the --tls-cert-file and --tls-private-key-file arguments are set as appropriate",
+    "name": "Ensure that the API Server --tls-cert-file and --tls-private-key-file arguments are set as appropriate",
     "description": "Setup TLS connection on the API server.",
     "long_description": "API server communication contains sensitive parameters that should remain encrypted in transit. Configure the API server to serve only HTTPS traffic.",
     "remediation": "Follow the Kubernetes documentation and set up the TLS connection on the apiserver. Then, edit the API server pod specification file `/etc/kubernetes/manifests/kube-apiserver.yaml` on the master node and set the TLS certificate and private key file parameters.\n\n \n```\n--tls-cert-file=<path/to/tls-certificate-file> \n--tls-private-key-file=<path/to/tls-key-file>\n\n```\n\n#### Impact Statement\nTLS and client certificate authentication must be configured for your Kubernetes cluster deployment.\n\n#### Default Value\nBy default, `--tls-cert-file` and `--tls-private-key-file` arguments are not set.",
@@ -13,7 +13,7 @@
         "armoBuiltin": true
     },
     "rulesNames": [
-        "ensure-that-the-tls-cert-file-and-tls-private-key-file-arguments-are-set-as-appropriate"
+        "ensure-that-the-api-server-tls-cert-file-and-tls-private-key-file-arguments-are-set-as-appropriate"
     ],
     "baseScore": 8
 }
