CIS section 2 - removed control 2.7, implemented PR comments

--- a/rules-tests/etcd-tls-enabled/fail-missing-cert-argument/input/etcdpod.yaml
+++ b/rules-tests/etcd-tls-enabled/fail-missing-cert-argument/input/etcdpod.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     component: etcd
     tier: control-plane
-  name: kube-apiserver-minikube
+  name: etcd
   namespace: kube-system
 spec:
   containers:
