"publicRegistries" object fixed to empty listin default-config-inputs.json file

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -40,10 +40,7 @@
                 "bin/busybox",
                 "usr/bin/busybox"
             ],
-            "publicRegistries": [
-                "quay.io",
-                "registry.hub.docker.com"
-            ],
+            "publicRegistries": [],
             "sensitiveInterfaces": [
                 "nifi",
                 "argo-server",
