fixed tests according to fixed rule

--- a/rules-tests/rule-can-create-pod-kube-system-v1/clusterrole-clusterrolebinding/input/clusterrole.yaml
+++ b/rules-tests/rule-can-create-pod-kube-system-v1/clusterrole-clusterrolebinding/input/clusterrole.yaml
@@ -3,6 +3,6 @@ kind: ClusterRole
 metadata:
   name: test
 rules:
-- apiGroups: ["rbac.authorization.k8s.io"]
+- apiGroups: [""]
   resources: ["pods", "rolebindings"]
   verbs: ["create", "watch", "list"]
