container_image_repository rule to support docker.io implicitly defined image

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -10,9 +10,10 @@
     "settings": {
         "postureControlInputs": {
             "imageRepositoryAllowList": [
-                "ecr.*amazonaws.com",
+                "amazonaws.com",
                 ".*.gcr.io",
-                ".*azurecr.io"
+                "azurecr.io",
+                "docker.io"
             ],
             "insecureCapabilities": [
                 "SETPCAP",
