some adjustment to make registry search in image safer

--- a/rules-tests/container-image-repository/pod-passed/input/pod.yaml
+++ b/rules-tests/container-image-repository/pod-passed/input/pod.yaml
@@ -8,5 +8,5 @@ metadata:
 spec:
   containers:
   - name: command-demo-container
-    image: debian-azurecr.io # Matches regex
+    image: debian-azurecr.io/ # Matches regex
   restartPolicy: OnFailure
