--- a/rules-tests/container-image-repository/workload-failed/input/deployment.yaml
+++ b/rules-tests/container-image-repository/workload-failed/input/deployment.yaml
@@ -28,7 +28,7 @@ spec:
               periodSeconds : 20
           -
             name : goproxy2
-            image : k8s.gcr.io/goproxy:0.1
+            image : gcr.io/goproxy:0.1
             ports :
               -
                 containerPort : 8080
