Apply suggestions from code review
Co-authored-by: YiscahLevySilas1 <80635572+YiscahLevySilas1@users.noreply.github.com>

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -10,9 +10,9 @@
     "settings": {
         "postureControlInputs": {
             "imageRepositoryAllowList": [
-                "amazonaws.com",
+                "ecr.*amazonaws.com",
                 ".*.gcr.io",
-                "azurecr.io",
+                ".*azurecr.io",
                 "docker.io"
             ],
             "insecureCapabilities": [
