--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -2,14 +2,16 @@ name: export
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
+    paths-ignore: ['**.md']
   pull_request:
-    branches: [ master ]
-    types: [ closed ]
-
+    branches: [master]
+    types: [closed]
+    paths-ignore: ['**.md']
+    
 jobs:
   once:
-    name: Create release
+    name: Build, Test, Create And Upload Release
     runs-on: ubuntu-latest
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -17,9 +19,10 @@ jobs:
       - uses: actions/checkout@v2
         name: checkout repo content
 
+      # Test using Golang OPA hot rule compilation
       - name: Set up Go
         uses: actions/setup-go@v2
-        with: 
+        with:
           go-version: 1.18
 
       - name: Test Regoes
@@ -27,8 +30,45 @@ jobs:
         run: |
           apt update && apt install -y cmake
           GOPATH=$(go env GOPATH) make
-        
-      - name: Create a release
+
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.10.6
+
+      - name: Setup OPA binaries
+        uses: open-policy-agent/setup-opa@v2
+        with:
+          version: v0.44.0
+
+      - name: Build OPA bundles
+        run: |
+          mkdir -p release
+          pip install requests pyyaml
+          python ./scripts/bundle.py . -o ./release --removed-out release/removed.json --edit-readme
+      
+      - name: Test OPA bundle
+        working-directory: testrunner
+        env:
+          BUNDLE: ../release/kubescape_regolibrary_bundle.tar.gz
+          SKIPPED_RULES: ../release/removed.json
+        run: |
+          go test -v -tags="static" . -run TestRegoBundles
+          rm ${SKIPPED_RULES}
+
+      - name: Create Metadata Release Files
+        run: |
+          python ./scripts/export.py
+      
+      # The next step kept here for only backward competability.
+      # Release files should have extensions!
+      - name: Strip Metadata Files Extensions (to be removed)
+        run: |
+          cd release
+          find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
+          find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
+
+      - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -38,64 +78,20 @@ jobs:
           release_name: Release v1.0.${{ github.run_number }}
           draft: false
           prerelease: false
-  build:
-    env:
-        RELEASE: v1.0.${{ github.run_number }} 
-    name: Create cross-platform release build, tag and upload binaries
-    needs: once
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        json_file: [ nsa , mitre, armobest, frameworks, controls, rules, default_config_inputs, attack_tracks, exceptions ]
-    steps:
-      - uses: actions/checkout@v2
-        name: checkout repo content
 
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8 #install the python needed
-      - name: execute py script # run the run.py to get the latest data
-        run: |
-          python ./scripts/export.py
-
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+      - name: Upload Release Assets
+        id: upload-release-assets
+        uses: dwenegar/upload-release-assets@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.once.outputs.upload_url }}
-          asset_path: release/${{ matrix.json_file }}.json
-          asset_name: ${{ matrix.json_file }}
-          asset_content_type: application/octet-stream
-  csv:
-    name: Upload csv binaries
-    needs: once
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        csv-files: [ControlID_RuleName, FWName_CID_CName]
-    steps:
-      - uses: actions/checkout@v2
-        name: checkout repo content
+          release_id: ${{ steps.create_release.outputs.id }}
+          assets_path: release
+      
+      - name: Update readme
+        uses: Andro999b/push@v1.3
+        with:
+          branch: master
+          github_token: ${{ secrets.GITHUB_TOKEN }} 
+          message: Update README.MD
 
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8 #install the python needed
-      - name: execute py script # run the run.py to get the latest data
-        run: |
-          python ./scripts/export.py
-          
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.once.outputs.upload_url }}
-          asset_path: release/${{ matrix.csv-files }}.csv
-          asset_name: ${{ matrix.csv-files }}
-          asset_content_type: application/octet-stream
-          
