Added CloudProvider; Removed defaults for imageRepositoryAllowList

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -9,11 +9,9 @@
     },
     "settings": {
         "postureControlInputs": {
+            "CloudProvider": [
+            ],
             "imageRepositoryAllowList": [
-                "ecr.*amazonaws.com",
-                ".*.gcr.io",
-                ".*azurecr.io",
-                "docker.io"
             ],
             "insecureCapabilities": [
                 "SETPCAP",
