--- a/.github/workflows/export-NewControlsIDs.yaml
+++ b/.github/workflows/export-NewControlsIDs.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   once:
-    name: Auto update csv files
+    name: Create local releases
     runs-on: ubuntu-latest
 
     steps:
@@ -21,17 +21,11 @@ jobs:
       with: 
         go-version: 1.18
 
-    - name: Test Regoes
-      working-directory: testrunner
-      run: |
-        apt update && apt install -y cmake
-        GOPATH=$(go env GOPATH) make
-
     - name: Run a update-csv-files script
       run: python ./scripts/update-csv-files.py
     
     - name: Run export script
-      run: OUTPUT=releasesTest python ./scripts_migration/newExport.py
+      run: OUTPUT=releasesTest python ./scripts/export.py
 
     - name: stage changed files
       run: git add .
@@ -39,6 +33,6 @@ jobs:
     - name: Commit & Push changes
       uses: Andro999b/push@v1.3
       with:
-        branch: dev
+        branch: NewControlsIDs
         github_token: ${{ secrets.GITHUB_TOKEN }} 
 
