--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -36,25 +36,26 @@ jobs:
         with:
           python-version: 3.10.6
 
-      - name: Setup OPA binaries
-        uses: open-policy-agent/setup-opa@v2
-        with:
-          version: v0.44.0
+     
+      # - name: Setup OPA binaries
+      #   uses: open-policy-agent/setup-opa@v2
+      #   with:
+      #     version: v0.44.0
 
-      - name: Build OPA bundles
-        run: |
-          mkdir -p release
-          pip install requests pyyaml
-          python ./scripts/bundle.py . -o ./release --removed-out release/removed.json --edit-readme
+      # - name: Build OPA bundles
+      #   run: |
+      #     mkdir -p release
+      #     pip install requests pyyaml
+      #     python ./scripts/bundle.py . -o ./release --removed-out release/removed.json --edit-readme
       
-      - name: Test OPA bundle
-        working-directory: testrunner
-        env:
-          BUNDLE: ../release/kubescape_regolibrary_bundle.tar.gz
-          SKIPPED_RULES: ../release/removed.json
-        run: |
-          go test -v -tags="static" . -run TestRegoBundles
-          rm ${SKIPPED_RULES}
+      # - name: Test OPA bundle
+      #   working-directory: testrunner
+      #   env:
+      #     BUNDLE: ../release/kubescape_regolibrary_bundle.tar.gz
+      #     SKIPPED_RULES: ../release/removed.json
+      #   run: |
+      #     go test -v -tags="static" . -run TestRegoBundles
+      #     rm ${SKIPPED_RULES}
 
       - name: Create Metadata Release Files
         run: |
