--- a/.github/workflows/export-NewControlsIDs.yaml
+++ b/.github/workflows/export-NewControlsIDs.yaml
@@ -25,7 +25,9 @@ jobs:
       run: python ./scripts/update-csv-files.py
     
     - name: Run export script
-      run: OUTPUT=releasesDev python ./scripts/export.py
+      run: |
+        OUTPUT=pre-release python ./scripts/export.py
+        cp pre-release releasesDev
 
     - name: stage changed files
       run: git add .
