--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -31,7 +31,9 @@ jobs:
       run: python ./scripts/update-csv-files.py
     
     - name: Run export script
-      run: OUTPUT=pre-release python ./scripts/export.py
+      run: | 
+        OUTPUT=pre-release python ./scripts/export.py
+        cp -R pre-release releasesDev
 
     - name: stage changed files
       run: git add .
