--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -3,7 +3,7 @@ name: export
 on:
   push:
     branches: [master]
-    paths-ignore: ['**.md']
+    paths-ignore: ['**.md', 'releaseDev/**']
   pull_request:
     branches: [master]
     types: [closed]
@@ -30,13 +30,11 @@ jobs:
         run: |
           apt update && apt install -y cmake
           GOPATH=$(go env GOPATH) make
-
       - name: setup python
         uses: actions/setup-python@v2
         with:
           python-version: 3.10.6
 
-     
       # - name: Setup OPA binaries
       #   uses: open-policy-agent/setup-opa@v2
       #   with:
@@ -68,7 +66,6 @@ jobs:
           cd release
           find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
           find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
-
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -95,4 +92,3 @@ jobs:
           branch: master
           github_token: ${{ secrets.GITHUB_TOKEN }} 
           message: Update README.MD
-
