--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -3,9 +3,9 @@ name: Updating documentation
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
-    types: [ closed ]
+  # pull_request:
+  #   branches: [ master ]
+  #   types: [ closed ]
 
 jobs:
   once:
@@ -24,7 +24,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
-
         
       - name: execute upload script 
         env:
