--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -3,7 +3,7 @@ name: export
 on:
   push:
     branches: [master]
-    paths-ignore: ['**.md', 'releaseDev/**']
+    paths-ignore: ['**.md']
   pull_request:
     branches: [master]
     types: [closed]
