--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -31,6 +31,7 @@ jobs:
     - name: Run export script
       run: | 
         OUTPUT=pre-release python ./scripts/export.py
+        rm -r releaseDev
         cp -R pre-release releaseDev
     - name: stage changed files
       run: git add .
