--- a/controls/C-0235-ensurethatthekubeletconfigurationfilehaspermissionssetto644ormorerestrictive.json
+++ b/controls/C-0235-ensurethatthekubeletconfigurationfilehaspermissionssetto644ormorerestrictive.json
@@ -1,5 +1,5 @@
 {
-    "controlID": "CIS-3.1.3",
+    "controlID": "C-0235",
     "name": "Ensure that the kubelet configuration file has permissions set to 644 or more restrictive",
     "description": "Ensure that if the kubelet refers to a configuration file with the `--config` argument, that file has permissions of 644 or more restrictive.",
     "long_description": "The kubelet reads various parameters, including security settings, from a config file specified by the `--config` argument. If this file is specified you should restrict its file permissions to maintain the integrity of the file. The file should be writable by only the administrators on the system.",
@@ -11,9 +11,10 @@
     "attributes": {
         "armoBuiltin": true
     },
-    "rulesNames": ["ensure-that-the-kubelet-configuration-file-has-permissions-set-to-644-or-more-restrictive"],
+    "rulesNames": [
+        "ensure-that-the-kubelet-configuration-file-has-permissions-set-to-644-or-more-restrictive"
+    ],
     "baseScore": 0,
     "impact_statement": "None.",
-    "default_value": "See the AWS EKS documentation for the default value.",
-    "control-CIS-ID": "CIS-3.1.3"
-} 
+    "default_value": "See the AWS EKS documentation for the default value."
+}
