verify and has sig controls

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -11,6 +11,7 @@
         "postureControlInputs": {
             "imageRepositoryAllowList": [
             ],
+            "trustedCosignPublicKeys": [],
             "insecureCapabilities": [
                 "SETPCAP",
                 "NET_ADMIN",
