--- a/.github/workflows/gitregostore-release.yaml
+++ b/.github/workflows/gitregostore-release.yaml
@@ -2,12 +2,12 @@ name: GitRegoStore-Release-Tag
 on:
   push:
     branches: [ dev ] 
+defaults:
+  run:
+    working-directory: ./gitregostore
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: gitregostore
     steps:
     - uses: actions/checkout@v3
 
