--- a/.github/workflows/gitregostore-release.yaml
+++ b/.github/workflows/gitregostore-release.yaml
@@ -17,9 +17,11 @@ jobs:
         go-version: 1.18
 
     - name: Build
+      working-directory: ./gitregostore
       run: go build -v ./...
 
     - name: Test
+      working-directory: ./gitregostore
       run: go test -v ./...
 
     - name: Create a release
