--- a/.github/workflows/gitregostore-release.yaml
+++ b/.github/workflows/gitregostore-release.yaml
@@ -31,5 +31,16 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: v0.0.${{ github.run_number }}
+        release_name: GitRegoStore Release v0.0.${{ github.run_number }}
         draft: false
         prerelease: false
+    
+
+    - name: Upload Release Assets
+      id: upload-release-assets
+      uses: dwenegar/upload-release-assets@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        release_id: ${{ steps.create_release.outputs.id }}
+        assets_path: gitregostore
