updating rulesNames of C-0238

--- a/controls/C-0238-ensurethatthekubeconfigfilepermissionsaresetto644ormorerestrictive.json
+++ b/controls/C-0238-ensurethatthekubeconfigfilepermissionsaresetto644ormorerestrictive.json
@@ -11,7 +11,9 @@
     "attributes": {
         "armoBuiltin": true
     },
-    "rulesNames": [],
+    "rulesNames": [
+        "Ensure-that-the-kubeconfig-file-permissions-are-set-to-644-or-more-restrictive"
+    ],
     "baseScore": 0,
     "impact_statement": "None.",
     "default_value": "See the AWS EKS documentation for the default value."
