--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -22,9 +22,9 @@ jobs:
     - name: Test
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: go test -v ./...
+      run: go test -v github.com/kubescape/regolibrary/gitregostore/...
         
     - name: Build
-      run: go build -v ./...
+      run: go build -v github.com/kubescape/regolibrary/gitregostore/...
 
 
