--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Test
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: go test -v github.com/kubescape/regolibrary/gitregostore/...
+      run: go test -v -race ./...
         
     - name: Build
       run: go build -v github.com/kubescape/regolibrary/gitregostore/...
