Adding actionRequired configuration to att
Signed-off-by: David Wertenteil <dwertent@armosec.io>

--- a/controls/C-0012-applicationscredentialsinconfigurationfiles.json
+++ b/controls/C-0012-applicationscredentialsinconfigurationfiles.json
@@ -1,6 +1,7 @@
 {
     "name": "Applications credentials in configuration files",
     "attributes": {
+        "actionRequired": "configuration",
         "armoBuiltin": true,
         "microsoftMitreColumns": [
             "Credential access",
