feat: add set-fsgroup-value rule
Signed-off-by: Alessio Greggi <ale_grey_91@hotmail.it>

--- a/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
+++ b/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
@@ -19,7 +19,8 @@
         "drop-capability-netraw",
         "set-seLinuxOptions",
         "set-seccomp-profile",
-	"set-procmount-default"
+	"set-procmount-default",
+	"set-fsgroup-value"
     ],
     "baseScore": 8,
     "impact_statement": "If you incorrectly apply security contexts, you may have trouble running the pods.",
