feat: add set-fsgroupchangepolicy-value
Signed-off-by: Alessio Greggi <ale_grey_91@hotmail.it>

--- a/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
+++ b/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
@@ -20,7 +20,8 @@
         "set-seLinuxOptions",
         "set-seccomp-profile",
 	"set-procmount-default",
-	"set-fsgroup-value"
+	"set-fsgroup-value",
+	"set-fsgroupchangepolicy-values"
     ],
     "baseScore": 8,
     "impact_statement": "If you incorrectly apply security contexts, you may have trouble running the pods.",
