feat: add set-systctl-params
Signed-off-by: Alessio Greggi <ale_grey_91@hotmail.it>

--- a/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
+++ b/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
@@ -21,7 +21,8 @@
         "set-seccomp-profile",
 	"set-procmount-default",
 	"set-fsgroup-value",
-	"set-fsgroupchangepolicy-values"
+	"set-fsgroupchangepolicy-values",
+	"set-systctls-params"
     ],
     "baseScore": 8,
     "impact_statement": "If you incorrectly apply security contexts, you may have trouble running the pods.",
