--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -17,6 +17,10 @@ jobs:
         run: |
           apt update && apt install -y cmake
           GOPATH=$(go env GOPATH) make
+      - name: Update frameworks subsections
+        working-directory: scripts
+        run: |
+          generate_subsections_ids.sh
       - name: Run export script
         run: |
           OUTPUT=pre-release python ./scripts/export.py
