--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -12,15 +12,14 @@ jobs:
         uses: actions/setup-go@bfdd3570ce990073878bf10f6b2d79082de49492
         with:
           go-version: 1.19
+      - name: Update frameworks subsections
+        run: |
+          ./scripts/generate_subsections_ids.sh
       - name: Test Regoes
         working-directory: testrunner
         run: |
           apt update && apt install -y cmake
           GOPATH=$(go env GOPATH) make
-      - name: Update frameworks subsections
-        working-directory: scripts
-        run: |
-          generate_subsections_ids.sh
       - name: Run export script
         run: |
           OUTPUT=pre-release python ./scripts/export.py
