--- a/.github/workflows/update-fw-subsections.yaml
+++ b/.github/workflows/update-fw-subsections.yaml
@@ -1,10 +1,10 @@
-name: update-csvs
+name: update-fw-subsections
 on:
   push:
     branches: [dev]
 jobs:
   once:
-    name: Build, Test, Create And Generate releaseDev
+    name: Generate frameworks subsections
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@50fbc622fc4ef5163becd7fab6573eac35f8462e
@@ -12,16 +12,9 @@ jobs:
         uses: actions/setup-go@bfdd3570ce990073878bf10f6b2d79082de49492
         with:
           go-version: 1.19
-      - name: Test Regoes
-        working-directory: testrunner
+      - name: Update frameworks subsections
         run: |
-          apt update && apt install -y cmake
-          GOPATH=$(go env GOPATH) make
-      - name: Run export script
-        run: |
-          OUTPUT=pre-release python ./scripts/export.py
-          rm -r releaseDev
-          cp -R pre-release releaseDev
+          ./scripts/generate_subsections_ids.sh
       - name: stage changed files
         run: git add .
       - name: Commit & Push changes
