--- a/rules/runAsUserName/test/pod/input/pod1.yaml
+++ b/rules/runAsUserName/test/pod/input/pod1.yaml
@@ -3,6 +3,8 @@ kind: Pod
 metadata:
   name: nginx1
 spec:
+  nodeSelector:
+    kubernetes.io/os: windows
   securityContext:
     runAsUserName: null
   containers:
