--- a/.github/workflows/rego-tests.yaml
+++ b/.github/workflows/rego-tests.yaml
@@ -3,6 +3,10 @@ on:
   pull_request:
     branches: [dev, master]
     types: [opened]
+    paths-ignore:
+      # Do not run the pipeline if only Markdown files changed
+      - '**.yaml'
+      - '**.md'
 jobs:
   once:
     name: Build, Test Regos
