--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -3,9 +3,8 @@ on:
   pull_request:
     branches: [dev, master]
     types: [ edited, opened, synchronize, reopened ]
-        paths-ignore:
-      # Do not run the pipeline if only Markdown files changed
-      - '**.md'
+    # Do not run the pipeline if only Markdown files changed
+    paths-ignore: ['**.md']
 jobs:
   build:
     runs-on: ubuntu-latest
