--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: go test -v -race ./... -covermode=count -coverprofile=coverage.out
+        run: go test -v ./... -covermode=count -coverprofile=coverage.out
 
       - name: Build
         run: go build -v github.com/kubescape/regolibrary/gitregostore/...
