--- a/rules/access-container-service-account-v1/test/clusterrole-rolebinding/input/rolebinding.yaml
+++ b/rules/access-container-service-account-v1/test/clusterrole-rolebinding/input/rolebinding.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 subjects:
 - kind: ServiceAccount  
-  name: jane
+  name: default
   namespace: default
 roleRef:
   kind: ClusterRole 
