--- a/rules/access-container-service-account-v1/test/role-rolebinding/input/rolebinding.yaml
+++ b/rules/access-container-service-account-v1/test/role-rolebinding/input/rolebinding.yaml
@@ -8,7 +8,7 @@ subjects:
   name: jane 
   apiGroup: rbac.authorization.k8s.io
 - kind: ServiceAccount
-  name: john-dev
+  name: default
   namespace: default
 roleRef:
   kind: Role 
