--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -1,7 +1,7 @@
 name: pr-tests
 on:
   pull_request:
-    branches: [dev, master, main]
+    # run for every chnage in the PR
     types: [ edited, opened, synchronize, reopened ]
     # Do not run the pipeline if only Markdown files changed
     paths-ignore: ['**.md']
