added CHECKOUT_REPO param to binary_build_and_e2e job
Signed-off-by: Matan Avital <matavital13@gmail.com>

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -54,4 +54,5 @@ jobs:
       GO_VERSION: "1.19"
       RELEASE: ""
       CLIENT: test
+      CHECKOUT_REPO: kubescape/kubescape
     secrets: inherit
