--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -61,6 +61,8 @@ jobs:
           release_id: ${{ steps.create_release.outputs.id }}
           assets_path: release
           
+      - run: git status
+          
       - name: Update readme
         uses: Andro999b/push@c77535fe7a94645f7ceca83e48e6cc977620710e
         with:
