--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -61,8 +61,10 @@ jobs:
           release_id: ${{ steps.create_release.outputs.id }}
           assets_path: release
           
-      - run: git status
-          
+      - run: git status # show modified files
+
+      - run: git diff # show diff in files
+
       - name: Update readme
         uses: Andro999b/push@c77535fe7a94645f7ceca83e48e6cc977620710e
         with:
